--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
         <item>Коробка</item>
         <item>Ящик</item>
     </string-array>
+    <string name="zEmail">saadat.nursultan@nu.edu.kz</string>
 </resources>
